--- a/static/global.css
+++ b/static/global.css
@@ -3,7 +3,8 @@ body {
 	font-family: Roboto, -apple-system, BlinkMacSystemFont, Segoe UI, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 	font-size: 14px;
 	line-height: 1.5;
-	color: #333;
+	background-color: #222;
+	color: #aaa
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -17,7 +18,14 @@ h1 {
 }
 
 a {
-	color: inherit;
+	color: #8989ff;
+	transition: color .1s;
+}
+a:visited {
+	color: #d289ff;
+}
+a:hover {
+	color: #fff689;
 }
 
 code {
