--- a/svelte-from-scratch/public/bifrost-components.css
+++ b/svelte-from-scratch/public/bifrost-components.css
@@ -1,14 +1,35 @@
+:root {
+  --appbar-height: 40px;
+  --navigation-width: 200px;
+  --bfc-base: #222;
+  --bfc-base-light: #333;
+}
+
 /* AppBar */
 .bf-appbar {
-  background-color: #333;
+  height: var(--appbar-height);
+  background-color: var(--bfc-base-light);
   display: flex;
   /* justify-content: flex-end; */
   justify-content: space-between;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
 }
 .bf-appbar .logo {
   margin-left: 1rem;
   align-self: center;
-  color: white
+  color: white;
+  letter-spacing: 4px;
+  transition: all ease 1s;
+  color: #aaa;
+  text-transform: uppercase;
+}
+.bf-appbar .logo:hover {
+  letter-spacing: 20px;
+  text-decoration: none;
+  color: #fff;
 }
 .bf-appbar > nav {
   display: flex;
@@ -16,36 +37,71 @@
 
 .bf-appbar .bf-dropdown-content {
   right: 0;
-  border-top: 2px solid #222222;
+  border-top: 2px solid var(--bfc-base);
 }
 .bf-appbar .bf-button {
   border: none;
-  border-left: 2px solid #222222;
+  border-left: 2px solid var(--bfc-base);
   background-color: transparent;
   color: inherit;
   border-radius: 0;
   margin: 0;
+  outline: none;
+  padding: 0 0.9rem;
+  height: var(--appbar-height);
 }
 .bf-appbar .bf-button:hover,
 .bf-appbar .bf-button.active {
   background-color: hsla(0, 0%, 100%, 0.1);
+  border: none;
+  border-left: 2px solid var(--bfc-base);
+}
+
+/* Navigation */
+.bf-navigation {
+  top: 0;
+  left: 0;
+  bottom: 0;
+  position: fixed;
+  width: 200px;
+  background-color: var(--bfc-base-light);
+  border-top: 2px solid var(--bfc-base);
+  z-index: 2;
+}
+
+.bf-layout {
+  margin-top: var(--appbar-height);
+  margin-left: var(--navigation-width);
+}
+.bf-layout .bf-navigation {
+  top: var(--appbar-height);
+  z-index: 2;
+}
+.bf-layout .bf-appbar {
+  z-index: 3;
 }
 
 /* Button */
 .bf-button {
-  margin: 0 .5rem;
+  margin: 0 0.5rem 0 0;
   cursor: pointer;
   padding: 0.4rem 0.9rem;
   background-color: transparent;
-  border: 2px solid #bb00ff;
+  border: 2px solid #d289ff;
   color: inherit;
   border-radius: 6rem;
 }
 .bf-button:hover {
-  background-color: #bb00ff;
-  border: 2px solid #bb00ff;
+  background-color: #d289ff;
+  border: 2px solid #d289ff;
   color: black;
   text-decoration: none;
+}
+.bf-button[disabled] {
+  background-color: #222;
+  border: 2px solid #333;
+  color: #666;
+  cursor: not-allowed;
 }
 
 /* Dropdown */
@@ -57,6 +113,7 @@
   position: absolute;
   background-color: #333;
   min-width: 150px;
+  z-index: 2;
 }
 .bf-dropdown-content > * {
   color: inherit;
@@ -73,6 +130,6 @@
 
 /* uhh hack?*/
 .fa-fw {
-    text-align: center;
-    width: 1.25em;
+  text-align: center;
+  width: 1.25em;
 }
