--- a/svelte-from-scratch/public/global.css
+++ b/svelte-from-scratch/public/global.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat|Mr+Dafoe&display=swap');
+
 html,
 body {
   position: relative;
@@ -11,7 +13,7 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   /* font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif; */
 }
 
@@ -65,4 +67,15 @@ button:not(:disabled):active {
 
 button:focus {
   border-color: #666;
+}
+
+.streak {
+  font-family: "Mr Dafoe", cursive;
+  color: #ff3e00;
+  font-size: 4em;
+  font-weight: 100;
+  transform: rotate(-8deg);
+  background: -webkit-linear-gradient(94deg, yellow, #ff0000 23%, #bb00ff 76%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
