--- a/svelte-from-scratch/public/global.css
+++ b/svelte-from-scratch/public/global.css
@@ -7,66 +7,18 @@ body {
   height: 100%;
 }
 
+a {
+  text-decoration: none;
+}
+
 body {
-  background-color: #222;
-  color: #aaa;
+  background-color: var(--bfc-base);
+  color: var(--bfc-base-text);
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: "Montserrat", sans-serif;
   /* font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif; */
-}
-
-a {
-  color: rgb(0, 100, 200);
-  text-decoration: none;
-}
-
-a:hover {
-  text-decoration: underline;
-}
-
-label {
-  display: block;
-}
-
-input,
-button,
-select,
-textarea {
-  font-family: inherit;
-  font-size: inherit;
-  padding: 0.4em;
-  margin: 0 0 0.5em 0;
-  box-sizing: border-box;
-  border: 1px solid #ccc;
-  border-radius: 2px;
-}
-
-input:disabled {
-  color: #ccc;
-}
-
-input[type="range"] {
-  height: 0;
-}
-
-button {
-  color: #333;
-  background-color: #f4f4f4;
-  outline: none;
-}
-
-button:disabled {
-  color: #999;
-}
-
-button:not(:disabled):active {
-  background-color: #ddd;
-}
-
-button:focus {
-  border-color: #666;
 }
 
 .streak {
@@ -75,7 +27,7 @@ button:focus {
   font-size: 4em;
   font-weight: 100;
   transform: rotate(-8deg);
-  background: -webkit-linear-gradient(94deg, yellow, #ff0000 23%, #bb00ff 76%);
+  background: -webkit-linear-gradient(90deg, yellow, #ff0000 23%, #bb00ff 76%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
