five in a row check for winner

--- a/svelte-from-scratch/public/bifrost-theme.css
+++ b/svelte-from-scratch/public/bifrost-theme.css
@@ -13,6 +13,7 @@
   --bfc-base-text: var(--bfc-base-150);
 
   --bfc-primary: #d289ff;
+  --bfc-secondary: #ffff6b;
 
   --bf-appbar-height: 40px;
   --bf-navigation-width: 200px;
