--- a/svelte-from-scratch/public/bifrost-theme.css
+++ b/svelte-from-scratch/public/bifrost-theme.css
@@ -32,6 +32,9 @@
   --bfc-base: var(--bfc-base-100);
   --bfc-base-fg: var(--bfc-base-200);
   --bfc-base-text: var(--bfc-base-150);
-  
+
+  --bfc-primary: #9e00ff;
+  --bfc-secondary: #ca8c00;
+
   --bfl-border: 2px solid var(--bfc-base);
 }
