--- a/svelte-from-scratch/public/global.css
+++ b/svelte-from-scratch/public/global.css
@@ -31,3 +31,7 @@ body {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
+
+.bf-lightmode .snowflake {
+  fill: #88b5e6
+}
