--- a/svelte-from-scratch/public/bifrost-theme.css
+++ b/svelte-from-scratch/public/bifrost-theme.css
@@ -1,8 +1,9 @@
 :root,
 .bf-darkmode {
   --bfc-base-hs: 0, 0%;
-  --bfc-base-hsl: 0, 0%, 10%; /* darkest gray */
-  --bfc-base-200: hsl(var(--bfc-base-hs), 100%); /* white */
+  --bfc-base-hsl: var(--bfc-base-hs), 10%; /* darkest gray */
+  --bfc-base-200-hsl: var(--bfc-base-hs), 100%;
+  --bfc-base-200: hsl(var(--bfc-base-200-hsl)); /* white */
   --bfc-base-180: hsl(var(--bfc-base-hs), 80%);
   --bfc-base-150: hsl(var(--bfc-base-hs), 55%);
   --bfc-base-120: hsl(var(--bfc-base-hs), 24%);
@@ -17,14 +18,16 @@
   --bfc-secondary: #ffff6b;
 
   --bf-appbar-height: 40px;
-  --bf-navigation-width: 200px;
+  --bf-navigation-width: 240px;
+  --bf-navigation-width-collapsed: 50px;
   --bfl-border: 2px solid var(--bfc-base);
 }
 
 .bf-lightmode {
   --bfc-base-hs: 0, 0%;
   --bfc-base-hsl: var(--bfc-base-hs), 100%; /* white */
-  --bfc-base-200: hsl(var(--bfc-base-hs), 0%); /* black */
+  --bfc-base-200-hsl: var(--bfc-base-hs), 0%;
+  --bfc-base-200: hsl(var(--bfc-base-200-hsl)); /* black */
   --bfc-base-180: hsl(var(--bfc-base-hs), 20%);
   --bfc-base-150: hsl(var(--bfc-base-hs), 50%);
   --bfc-base-120: hsl(var(--bfc-base-hs), 80%);
